@@ -1,6 +1,7 @@
 package co.rsk.peg.bitcoin;
 
 import static co.rsk.peg.bitcoin.BitcoinTestUtils.coinListOf;
+import static org.ethereum.util.ByteUtil.EMPTY_BYTE_ARRAY;
 import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -37,6 +38,8 @@ class UtxoUtilsTest {
     private static final NetworkParameters btcMainnetParams = bridgeMainnetConstants.getBtcParams();
     private static final ErpFederation TEST_ERP_FEDERATION = FederationTestUtils.getErpFederation(btcMainnetParams);
     private static final int FIRST_OUTPUT_INDEX = 0;
+    // 00 = 0, FC = 252, FD1027 = 10_000
+    private static final String ENCODED_VALUES_OF_DIFFERENT_SIZES = "00FCFD1027";
     private static final Address testAddress = BitcoinTestUtils.createP2PKHAddress(btcMainnetParams, "test");
 
     private static Stream<Arguments> validOutpointValues() {
@@ -50,7 +53,7 @@ class UtxoUtilsTest {
 
         arguments.add(Arguments.of(Hex.decode("FC"), coinListOf(252)));
 
-        // 252 = FC, 187 = BB, 13_337 = FE9145DC00, 14_435_729 = FEDC4591
+        // 252 = FC, 187 = BB, 13_337 = FD1934, 14_435_729 = FE9145DC00
         arguments.add(Arguments.of(Hex.decode("FCFCBBBBBBFD1934FE9145DC00"), coinListOf(252, 252, 187, 187, 187, 13_337, 14_435_729)));
 
         arguments.add(Arguments.of(Hex.decode("FF0040075AF0750700"), Collections.singletonList(MAX_BTC)));
@@ -72,7 +75,7 @@ class UtxoUtilsTest {
             bigListOfOutpointValues
         ));
 
-        arguments.add(Arguments.of(new byte[]{}, Collections.EMPTY_LIST));
+        arguments.add(Arguments.of(EMPTY_BYTE_ARRAY, Collections.EMPTY_LIST));
 
         return arguments.stream();
     }
@@ -108,39 +111,64 @@ class UtxoUtilsTest {
     }
 
     @Test
+    void decodeOutpointValues_withEncodedOutpointValues_shouldReturnAnUnmodifiableList() {
+        // arrange
+        byte[] encodedOutpointValues = Hex.decode(ENCODED_VALUES_OF_DIFFERENT_SIZES);
+
+        // act
+        List<Coin> outpointValues = UtxoUtils.decodeOutpointValues(encodedOutpointValues);
+
+        // assert
+        assertThrows(UnsupportedOperationException.class, () -> outpointValues.add(Coin.SATOSHI));
+    }
+
+    @Test
     void encodeOutpointValues_null_shouldReturnEmptyArray() {
         // act
         byte[] outpointValues = UtxoUtils.encodeOutpointValues(null);
 
         // assert
-        byte[] expectedEncodedValues = new byte[]{};
-        assertArrayEquals(expectedEncodedValues, outpointValues);
+        assertArrayEquals(EMPTY_BYTE_ARRAY, outpointValues);
+    }
+
+    @Test
+    void encodeOutpointValues_whenListContainsNullValue_shouldThrowInvalidOutpointValueException() {
+        // arrange
+        List<Coin> outpointValues = Arrays.asList(Coin.valueOf(100), null, Coin.valueOf(300));
+
+        // act & assert
+        assertThrows(InvalidOutpointValueException.class,
+            () -> UtxoUtils.encodeOutpointValues(outpointValues));
+    }
+
+    @Test
+    void encodeOutpointValues_whenNegativeValueComesBeforeNullValue_shouldThrowForTheNullValue() {
+        // arrange
+        // every value is checked for null before any is checked for being negative, so the
+        // null is reported even though the negative value comes first in the list
+        List<Coin> outpointValues = Arrays.asList(Coin.valueOf(-100), null);
+
+        // act & assert
+        assertThrows(InvalidOutpointValueException.class, () -> UtxoUtils.encodeOutpointValues(outpointValues));
     }
 
     @ParameterizedTest
     @MethodSource("invalidOutpointValues")
     void encodeOutpointValues_invalidOutpointValues_shouldThrowInvalidOutpointValueException(
-        List<Coin> outpointValues, String expectedMessage) {
-        // act
-        InvalidOutpointValueException invalidOutpointValueException = assertThrows(
-            InvalidOutpointValueException.class,
+        List<Coin> outpointValues) {
+        // act & assert
+        assertThrows(InvalidOutpointValueException.class,
             () -> UtxoUtils.encodeOutpointValues(outpointValues));
-        String actualMessage = invalidOutpointValueException.getMessage();
-
-        // assert
-        assertEquals(expectedMessage, actualMessage);
     }
 
     private static Stream<Arguments> invalidOutpointValues() {
         List<Arguments> arguments = new ArrayList<>();
 
         List<Coin> negativeOutpointValues = Arrays.asList(Coin.valueOf(-10), Coin.valueOf(-1000), Coin.valueOf(-100));
-        String expectedMessageForNegativeOutpointValues = String.format("Invalid outpoint value: %s. Negative and null values are not allowed.", -10);
-        arguments.add(Arguments.of(negativeOutpointValues, expectedMessageForNegativeOutpointValues));
+        arguments.add(Arguments.of(negativeOutpointValues));
 
         List<Coin> negativeAndPositiveOutpointValues = Arrays.asList(Coin.valueOf(200), Coin.valueOf(-100), Coin.valueOf(300));
-        String expectedMessageForNegativeAndPositiveOutpointValues = String.format("Invalid outpoint value: %s. Negative and null values are not allowed.", -100);
-        arguments.add(Arguments.of(negativeAndPositiveOutpointValues, expectedMessageForNegativeAndPositiveOutpointValues));
+        arguments.add(Arguments.of(negativeAndPositiveOutpointValues));
 
         return arguments.stream();
     }
@@ -148,15 +176,10 @@ class UtxoUtilsTest {
     @ParameterizedTest
     @MethodSource("invalidEncodedOutpointValues")
     void decodeOutpointValues_invalidOutpointValues_shouldThrowInvalidOutpointValueException(
-        byte[] encodedOutpointValues, String expectedMessage) {
-        // act
-        InvalidOutpointValueException invalidOutpointValueException = assertThrows(
-            InvalidOutpointValueException.class,
+        byte[] encodedOutpointValues) {
+        // act & assert
+        assertThrows(InvalidOutpointValueException.class,
             () -> UtxoUtils.decodeOutpointValues(encodedOutpointValues));
-        String actualMessage = invalidOutpointValueException.getMessage();
-
-        // assert
-        assertEquals(expectedMessage, actualMessage);
     }
 
     private static Stream<Arguments> invalidEncodedOutpointValues() {
@@ -164,21 +187,17 @@ class UtxoUtilsTest {
 
         // -100, -200, -300
         final byte[] negativeOutpointValues = Hex.decode("FF9CFFFFFFFFFFFFFFFF38FFFFFFFFFFFFFFFFD4FEFFFFFFFFFFFF");
-        String expectedMessageForNegativeOutpointValues = String.format("Invalid outpoint value: %s. Negative and null values are not allowed.", -100);
-        arguments.add(Arguments.of(negativeOutpointValues, expectedMessageForNegativeOutpointValues));
+        arguments.add(Arguments.of(negativeOutpointValues));
 
         // 100, 200, 300, -400
         final byte[] negativeAndPositiveOutpointValues = Hex.decode("64C8FD2C01FF70FEFFFFFFFFFFFF");
-        String expectedMessageForNegativeAndPositiveOutpointValues = String.format("Invalid outpoint value: %s. Negative and null values are not allowed.", -400);
-        arguments.add(Arguments.of(negativeAndPositiveOutpointValues, expectedMessageForNegativeAndPositiveOutpointValues));
+        arguments.add(Arguments.of(negativeAndPositiveOutpointValues));
 
         final byte[] invalidOutpointValues = Hex.decode("FC9145DC00FAFF00FE");
-        String expectedMessageForInvalidOutpointValues = String.format("Invalid value with invalid VarInt format: %s", "FC9145DC00FAFF00FE");
-        arguments.add(Arguments.of(invalidOutpointValues, expectedMessageForInvalidOutpointValues));
+        arguments.add(Arguments.of(invalidOutpointValues));
 
         final byte[] anotherInvalidOutpointValues = Hex.decode("FB8267DC00FCFF00FE");
-        String expectedMessageForAnotherInvalidOutpointValue = String.format("Invalid value with invalid VarInt format: %s", "FB8267DC00FCFF00FE");
-        arguments.add(Arguments.of(anotherInvalidOutpointValues, expectedMessageForAnotherInvalidOutpointValue));
+        arguments.add(Arguments.of(anotherInvalidOutpointValues));
 
         return arguments.stream();
     }
@@ -191,7 +210,7 @@ class UtxoUtilsTest {
         fundingTransaction.addInput(
             BitcoinTestUtils.createHash(1),
             FIRST_OUTPUT_INDEX,
-            new Script(new byte[]{})
+            new Script(EMPTY_BYTE_ARRAY)
         );
         fundingTransaction.addOutput(amountToSend, TEST_ERP_FEDERATION.getAddress());
 
@@ -241,7 +260,7 @@ class UtxoUtilsTest {
             fundingTransaction.addInput(
                 BitcoinTestUtils.createHash(i),
                 FIRST_OUTPUT_INDEX,
-                new Script(new byte[]{})
+                new Script(EMPTY_BYTE_ARRAY)
             );
             fundingTransaction.addOutput(amountToSend, TEST_ERP_FEDERATION.getAddress());
             pegout.addInput(fundingTransaction.getOutput(FIRST_OUTPUT_INDEX));
@@ -249,8 +268,123 @@ class UtxoUtilsTest {
         List<Coin> actualOutpointValues = UtxoUtils.extractOutpointValues(pegout);
 
         // assert
-        List<Coin> expectedOutpointValues = Stream.generate(() -> amountToSend).limit(1000)
-            .collect(Collectors.toList());
+        List<Coin> expectedOutpointValues = Stream.generate(() -> amountToSend).limit(1000).toList();
         assertArrayEquals(expectedOutpointValues.toArray(), actualOutpointValues.toArray());
+    }
+
+    @Test
+    void encodeOutputIndexes_withNull_shouldReturnEmptyArray() {
+        // act
+        byte[] encodedOutputIndexes = UtxoUtils.encodeOutputIndexes(null);
+
+        // assert
+        assertArrayEquals(EMPTY_BYTE_ARRAY, encodedOutputIndexes);
+    }
+
+    @Test
+    void encodeOutputIndexes_withEmptyList_shouldReturnEmptyArray() {
+        // act
+        byte[] encodedOutputIndexes = UtxoUtils.encodeOutputIndexes(List.of());
+
+        // assert
+        assertArrayEquals(EMPTY_BYTE_ARRAY, encodedOutputIndexes);
+    }
+
+    @Test
+    void encodeOutputIndexes_withDifferentOutputIndexes_shouldReturnEncodedOutputIndexesPreservingOrder() {
+        // arrange
+        // 0 = 00, 252 = FC, 10_000 = FD1027
+        List<Long> outputIndexes = List.of(0L, 252L, 10_000L);
+
+        // act
+        byte[] encodedOutputIndexes = UtxoUtils.encodeOutputIndexes(outputIndexes);
+
+        // assert
+        byte[] expectedEncodedOutputIndexes = Hex.decode(ENCODED_VALUES_OF_DIFFERENT_SIZES);
+        assertArrayEquals(expectedEncodedOutputIndexes, encodedOutputIndexes);
+    }
+
+    @Test
+    void encodeOutputIndexes_withNegativeOutputIndex_shouldThrowInvalidOutputIndexException() {
+        // arrange
+        List<Long> outputIndexes = List.of(-1L);
+
+        // act & assert
+        assertThrows(InvalidOutputIndexException.class, () -> UtxoUtils.encodeOutputIndexes(outputIndexes));
+    }
+
+    @Test
+    void encodeOutputIndexes_withNullOutputIndex_shouldThrowInvalidOutputIndexException() {
+        // arrange
+        List<Long> outputIndexes = Collections.singletonList(null);
+
+        // act & assert
+        assertThrows(InvalidOutputIndexException.class,
+            () -> UtxoUtils.encodeOutputIndexes(outputIndexes));
+    }
+
+    @Test
+    void decodeOutputIndexes_withNull_shouldReturnEmptyList() {
+        // act
+        List<Long> outputIndexes = UtxoUtils.decodeOutputIndexes(null);
+
+        // assert
+        assertEquals(List.of(), outputIndexes);
+    }
+
+    @Test
+    void decodeOutputIndexes_withEmptyArray_shouldReturnEmptyList() {
+        // act
+        List<Long> outputIndexes = UtxoUtils.decodeOutputIndexes(EMPTY_BYTE_ARRAY);
+
+        // assert
+        assertEquals(List.of(), outputIndexes);
+    }
+
+    @Test
+    void decodeOutputIndexes_withDifferentEncodedOutputIndexes_shouldReturnOutputIndexesPreservingOrder() {
+        // arrange
+        byte[] encodedOutputIndexes = Hex.decode(ENCODED_VALUES_OF_DIFFERENT_SIZES);
+
+        // act
+        List<Long> outputIndexes = UtxoUtils.decodeOutputIndexes(encodedOutputIndexes);
+
+        // assert
+        List<Long> expectedOutputIndexes = List.of(0L, 252L, 10_000L);
+        assertEquals(expectedOutputIndexes, outputIndexes);
+    }
+
+    @Test
+    void decodeOutputIndexes_withEncodedOutputIndexes_shouldReturnAnUnmodifiableList() {
+        // arrange
+        byte[] encodedOutputIndexes = Hex.decode(ENCODED_VALUES_OF_DIFFERENT_SIZES);
+
+        // act
+        List<Long> outputIndexes = UtxoUtils.decodeOutputIndexes(encodedOutputIndexes);
+
+        // assert
+        assertThrows(UnsupportedOperationException.class, () -> outputIndexes.add(1L));
+    }
+
+    @Test
+    void decodeOutputIndexes_withMalformedVarInt_shouldThrowInvalidOutputIndexException() {
+        // arrange
+        // FE (254) announces a five byte VarInt, but only two bytes follow it
+        byte[] encodedOutputIndexes = Hex.decode("FE0100");
+
+        // act & assert
+        assertThrows(InvalidOutputIndexException.class,
+            () -> UtxoUtils.decodeOutputIndexes(encodedOutputIndexes));
+    }
+
+    @Test
+    void decodeOutputIndexes_withEncodedNegativeOutputIndex_shouldThrowInvalidOutputIndexException() {
+        // arrange
+        // -1 encoded as a VarInt. Its eight bytes of ones read back into a signed long as -1
+        byte[] encodedOutputIndexes = Hex.decode("FFFFFFFFFFFFFFFFFF");
+
+        // act & assert
+        assertThrows(InvalidOutputIndexException.class,
+            () -> UtxoUtils.decodeOutputIndexes(encodedOutputIndexes));
     }
 }
